# pizzly

./: CMakeLists.txt  FilterFusions.hpp  GeneModel.hpp  LICENSE  README.md  common.h  main.cpp
scripts/: flatten_json.py  get_fragment_length.py  pizzly_flatten_json.py  pizzly_get_fragment_length.py
test/: .gitignore  README.md  Snakefile
